<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<!--modelVersion / -->
	<modelVersion>4.0.0</modelVersion>
	<!--parent / -->
	<!--groupId / -->
	<groupId>com.github.nhojpatrick.hamcrest</groupId>
	<!--artifactId / -->
	<artifactId>nhojpatrick-hamcrest</artifactId>
	<!--packaging / -->
	<packaging>pom</packaging>
	<!--name / -->
	<!--version / -->
	<version>1.0.0</version>
	<!--description / -->
	<!--url / -->
	<!--prerequisites / -->
	<!--issueManagement / -->
	<!--ciManagement / -->
	<!--inceptionYear / -->
	<!--mailingLists / -->
	<!--developers / -->
	<!--contributors / -->
	<!--licenses / -->
	<!--scm / -->
	<!--organization / -->
	<!--build /-->
	<build>
		<pluginManagement>
			<plugins>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.0</version>
					<configuration>
						<compilerArgs>
							<arg>-parameters</arg>
							<!--<arg>-verbose</arg>-->
							<arg>-Xlint:unchecked</arg>
						</compilerArgs>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.8.2</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-enforcer-plugin</artifactId>
					<version>3.0.0-M2</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-failsafe-plugin</artifactId>
					<version>2.22.1</version>
					<configuration>
						<argLine>${project.custom.failsafe.argLine.jpms}</argLine>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>2.5.2</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.1.0</version>
					<configuration>
						<archive>
							<manifestEntries>
								<Automatic-Module-Name>${project.Automatic-Module-Name}</Automatic-Module-Name>
							</manifestEntries>
						</archive>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>3.0.1</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-project-info-reports-plugin</artifactId>
					<version>2.9</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.7.1</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.0.1</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.1</version>
					<configuration>
						<argLine>${project.custom.surefire.argLine.jpms}</argLine>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>3.0.0</version>
					<executions>
						<execution>
							<id>remove-project-artifact-default</id>
							<goals>
								<goal>remove-project-artifact</goal>
							</goals>
							<configuration>
								<removeAll>true</removeAll>
							</configuration>
						</execution>
						<execution>
							<id>remove-project-artifact-clean</id>
							<phase>clean</phase>
							<goals>
								<goal>remove-project-artifact</goal>
							</goals>
							<configuration>
								<removeAll>true</removeAll>
							</configuration>
						</execution>
					</executions>
				</plugin>

				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>versions-maven-plugin</artifactId>
					<version>2.7</version>
					<dependencies>
						<dependency>
							<groupId>com.github.nhojpatrick.versions</groupId>
							<artifactId>nhojpatrick-versions-ruleset</artifactId>
							<version>1</version>
						</dependency>
					</dependencies>
					<configuration>
						<generateBackupPoms>false</generateBackupPoms>
						<rulesUri>classpath:///com/github/nhojpatrick/versions/ruleset/rules.xml</rulesUri>
					</configuration>
				</plugin>

				<plugin>
					<groupId>com.github.spotbugs</groupId>
					<artifactId>spotbugs-maven-plugin</artifactId>
					<version>3.1.8</version>
					<configuration>
						<debug>true</debug>
						<effort>Max</effort>
						<threshold>Low</threshold>
						<failOnError>true</failOnError>
						<!--<excludeFilterFile>spotbugs-exclude.xml</excludeFilterFile>-->
						<!--<excludeFilterFile>${session.executionRootDirectory}/spotbugs-security-exclude.xml</excludeFilterFile>-->
						<!--<includeFilterFile>spotbugs-include.xml</includeFilterFile>-->
						<!--<includeFilterFile>${session.executionRootDirectory}/spotbugs-security-include.xml</includeFilterFile>-->
						<plugins>
							<plugin>
								<groupId>com.h3xstream.findsecbugs</groupId>
								<artifactId>findsecbugs-plugin</artifactId>
								<version>1.8.0</version>
							</plugin>
							<plugin>
								<groupId>com.mebigfatguy.fb-contrib</groupId>
								<artifactId>fb-contrib</artifactId>
								<version>7.4.3</version>
							</plugin>
						</plugins>
					</configuration>
					<dependencies>
						<dependency>
							<groupId>com.github.spotbugs</groupId>
							<artifactId>spotbugs</artifactId>
							<version>3.1.8</version>
						</dependency>
					</dependencies>
				</plugin>

				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>0.8.1</version>
					<executions>
						<execution>
							<id>default-prepare-agent</id>
							<goals>
								<goal>prepare-agent</goal>
							</goals>
						</execution>
						<execution>
							<id>default-report</id>
							<phase>site</phase>
							<goals>
								<goal>report</goal>
							</goals>
						</execution>
						<execution>
							<id>default-check</id>
							<goals>
								<goal>check</goal>
							</goals>
							<configuration>
								<rules>
									<rule>
										<element>BUNDLE</element>
										<!--<element>CLASS</element>-->
										<!--<excludes>-->
										<!--<exclude>*Test</exclude>-->
										<!--</excludes>-->
										<limits>
											<limit>
												<counter>LINE</counter>
												<value>COVEREDRATIO</value>
												<minimum>50%</minimum>
											</limit>
										</limits>
									</rule>
								</rules>
								<!--<rules>-->
								<!--<rule>-->
								<!--<element>BUNDLE</element>-->
								<!--<limits>-->
								<!--<limit>-->
								<!--<counter>COMPLEXITY</counter>-->
								<!--<value>COVEREDRATIO</value>-->
								<!--<minimum>0.99</minimum>-->
								<!--</limit>-->
								<!--</limits>-->
								<!--</rule>-->
								<!--</rules>-->
								<haltOnFailure>false</haltOnFailure>
							</configuration>
						</execution>
					</executions>
					<configuration>
						<rules>
							<rule>
								<element>BUNDLE</element>
								<!--<element>CLASS</element>-->
								<!--<excludes>-->
								<!--<exclude>*Test</exclude>-->
								<!--</excludes>-->
								<limits>
									<limit>
										<counter>LINE</counter>
										<value>COVEREDRATIO</value>
										<minimum>60%</minimum>
									</limit>
								</limits>
							</rule>
						</rules>
						<!--<rules>-->
						<!--<rule>-->
						<!--<element>BUNDLE</element>-->
						<!--<limits>-->
						<!--<limit>-->
						<!--<counter>COMPLEXITY</counter>-->
						<!--<value>COVEREDRATIO</value>-->
						<!--<minimum>0.99</minimum>-->
						<!--</limit>-->
						<!--</limits>-->
						<!--</rule>-->
						<!--</rules>-->
						<!--<haltOnFailure>false</haltOnFailure>-->
					</configuration>
				</plugin>

			</plugins>
		</pluginManagement>
		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireJavaVersion>
									<version>[1.8,)</version>
								</requireJavaVersion>
								<requireMavenVersion>
									<version>[3.5.4,)</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-maven-plugin</artifactId>
				<!--<executions>-->
					<!--<execution>-->
						<!--<phase>verify</phase>-->
						<!--<goals>-->
							<!--<goal>check</goal>-->
						<!--</goals>-->
					<!--</execution>-->
				<!--</executions>-->
			</plugin>

		</plugins>
	</build>
	<!--profiles / -->
	<profiles>
		<profile>
			<id>jpms</id>
			<activation>
				<jdk>[9,)</jdk>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>build-helper-maven-plugin</artifactId>
						<version>3.0.0</version>
						<executions>
							<execution>
								<id>add-source-Java_Platform_Module_System</id>
								<phase>generate-sources</phase>
								<goals>
									<goal>add-source</goal>
								</goals>
								<configuration>
									<sources>
										<source>${project.basedir}/src/jpms-main/java</source>
									</sources>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
			<properties>
				<project.custom.java.version>9</project.custom.java.version>
				<maven.compiler.release>9</maven.compiler.release>
				<project.custom.failsafe.argLine.jpms>--add-opens ${project.Automatic-Module-Name}/${project.Automatic-Module-Name}.tests=ALL-UNNAMED</project.custom.failsafe.argLine.jpms>
				<project.custom.surefire.argLine.jpms>--add-opens ${project.Automatic-Module-Name}/${project.Automatic-Module-Name}.tests=ALL-UNNAMED</project.custom.surefire.argLine.jpms>
			</properties>
		</profile>
	</profiles>
	<!--modules / -->
	<modules>
		<module>all</module>
		<module>collections</module>
		<module>datetime</module>
		<module>lang</module>
		<module>optionals</module>
		<module>testing</module>
	</modules>
	<!--repositories / -->
	<!--pluginRepositories / -->
	<!--dependencies / -->
	<!--reports (Deprecated) / -->
	<!--reporting / -->
	<!--dependencyManagement / -->
	<dependencyManagement>
		<dependencies>

			<dependency>
				<groupId>com.github.nhojpatrick.hamcrest</groupId>
				<artifactId>nhojpatrick-hamcrest-all</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.github.nhojpatrick.hamcrest</groupId>
				<artifactId>nhojpatrick-hamcrest-collections</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.github.nhojpatrick.hamcrest</groupId>
				<artifactId>nhojpatrick-hamcrest-datetime</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.github.nhojpatrick.hamcrest</groupId>
				<artifactId>nhojpatrick-hamcrest-lang</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.github.nhojpatrick.hamcrest</groupId>
				<artifactId>nhojpatrick-hamcrest-optionals</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.github.nhojpatrick.hamcrest</groupId>
				<artifactId>nhojpatrick-hamcrest-testing</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>3.8.1</version>
			</dependency>

			<dependency>
				<groupId>org.hamcrest</groupId>
				<artifactId>hamcrest-all</artifactId>
				<version>${version.latest.hamcrest}</version>
			</dependency>

			<dependency>
				<groupId>org.hamcrest</groupId>
				<artifactId>hamcrest-core</artifactId>
				<version>${version.latest.hamcrest}</version>
			</dependency>

			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-api</artifactId>
				<version>${version.latest.junit.jupiter}</version>
			</dependency>

			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-engine</artifactId>
				<version>${version.latest.junit.jupiter}</version>
			</dependency>

			<dependency>
				<groupId>org.junit.platform</groupId>
				<artifactId>junit-platform-engine</artifactId>
				<version>${version.latest.junit.platform}</version>
			</dependency>

			<dependency>
				<groupId>org.junit.platform</groupId>
				<artifactId>junit-platform-launcher</artifactId>
				<version>${version.latest.junit.platform}</version>
			</dependency>

			<dependency>
				<groupId>org.junit.vintage</groupId>
				<artifactId>junit-vintage-engine</artifactId>
				<version>${version.latest.junit.vintage}</version>
			</dependency>

			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${version.latest.org.slf4j}</version>
			</dependency>

			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-log4j12</artifactId>
				<version>${version.latest.org.slf4j}</version>
			</dependency>

		</dependencies>
	</dependencyManagement>
	<!--distributionManagement / -->
	<!--properties / -->
	<properties>
		<!-- custom properties -->
		<project.custom.encoding>UTF-8</project.custom.encoding>
		<project.custom.java.version>1.8</project.custom.java.version>
		<!-- override maven properties -->
		<maven.test.failure.ignore>false</maven.test.failure.ignore>
		<maven.compiler.source>${project.custom.java.version}</maven.compiler.source>
		<maven.compiler.target>${project.custom.java.version}</maven.compiler.target>
		<project.build.sourceEncoding>${project.custom.encoding}</project.build.sourceEncoding>
		<project.build.outputEncoding>${project.custom.encoding}</project.build.outputEncoding>
		<project.reporting.outputEncoding>${project.custom.encoding}</project.reporting.outputEncoding>
		<!-- -->
		<downloadSources>true</downloadSources>
		<downloadJavadocs>true</downloadJavadocs>
		<generateBackupPoms>false</generateBackupPoms>
		<!-- Surefire/Failsafe -->
		<project.custom.failsafe.argLine.jpms></project.custom.failsafe.argLine.jpms>
		<project.custom.surefire.argLine.jpms></project.custom.surefire.argLine.jpms>
		<!-- -->
		<version.latest.hamcrest>1.3</version.latest.hamcrest>
		<version.latest.junit.jupiter>5.3.1</version.latest.junit.jupiter>
		<version.latest.junit.platform>1.3.1</version.latest.junit.platform>
		<version.latest.junit.vintage>5.3.1</version.latest.junit.vintage>
		<version.latest.org.slf4j>1.7.25</version.latest.org.slf4j>
		<!-- -->
		<project.Automatic-Module-Name></project.Automatic-Module-Name>
	</properties>
</project>
